--- a/shorter_explore.ipynb
+++ b/shorter_explore.ipynb
@@ -365,7 +365,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/x7/9w9mh0fd73zg4jr8l_9v9h840000gn/T/ipykernel_11953/1604276903.py:2: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "/var/folders/x7/9w9mh0fd73zg4jr8l_9v9h840000gn/T/ipykernel_2206/1604276903.py:2: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
       "  df.tags = df.tags.str.replace('|',\" \")\n"
      ]
     }
@@ -486,7 +486,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'2020', 'smurkio', 'music', 'video', 'durkio', 'OTF', 'cause', 'just', '2', 'hop', 'family', \"y'\", 'lil', 'chicago', 'hip', 'official', 'y', 'only', 'durk', 'the', 'drill', 'waited', 'all'}\n"
+      "{'OTF', 'all', 'durk', 'music', 'cause', 'y', 'hop', 'drill', 'durkio', 'family', 'the', 'only', 'lil', '2', 'smurkio', 'just', 'waited', 'chicago', 'official', \"y'\", 'video', 'hip', '2020'}\n"
      ]
     }
    ],
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1085,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +1115,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
