--- a/patrick_explore.ipynb
+++ b/patrick_explore.ipynb
@@ -2582,7 +2582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2620,7 +2620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -2640,7 +2640,7 @@
        "Name: lemmatized, Length: 1634, dtype: object"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2651,7 +2651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -2661,7 +2661,7 @@
        "\twith 91736 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2674,7 +2674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -3034,7 +3034,7 @@
        "[1634 rows x 36553 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3045,7 +3045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -3054,7 +3054,7 @@
        "0"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3065,7 +3065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3088,7 +3088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -3097,7 +3097,7 @@
        "(327, 36553)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3108,7 +3108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -3117,7 +3117,7 @@
        "(327, 36553)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3128,7 +3128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -3137,7 +3137,7 @@
        "(980, 36553)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3155,7 +3155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -3164,7 +3164,6 @@
      "text": [
       "Accuracy: 86.43%\n",
       "---\n",
-      "Confusion Matrix\n",
       "actual          0    1\n",
       "predicted_lm          \n",
       "0             847  133\n",
@@ -3184,7 +3183,7 @@
    "source": [
     "print('Accuracy: {:.2%}'.format(accuracy_score(train.actual, train.predicted_lm)))\n",
     "print('---')\n",
-    "print('Confusion Matrix')\n",
+    "\n",
     "print(pd.crosstab(train.predicted_lm, train.actual))\n",
     "print('---')\n",
     "print(classification_report(train.actual, train.predicted_lm))"
@@ -3192,7 +3191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -3201,7 +3200,6 @@
      "text": [
       "Accuracy: 86.54%\n",
       "---\n",
-      "Confusion Matrix\n",
       "actual          0   1\n",
       "predicted_lm         \n",
       "0             283  44\n",
@@ -3221,7 +3219,7 @@
    "source": [
     "print('Accuracy: {:.2%}'.format(accuracy_score(validate.actual, validate.predicted_lm)))\n",
     "print('---')\n",
-    "print('Confusion Matrix')\n",
+    "\n",
     "print(pd.crosstab(validate.predicted_lm, validate.actual))\n",
     "print('---')\n",
     "print(classification_report(validate.actual, validate.predicted_lm))"
@@ -3229,7 +3227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -3238,7 +3236,7 @@
        "MultinomialNB()"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3251,7 +3249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3267,7 +3265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -3276,7 +3274,6 @@
      "text": [
       "Accuracy: 86.43%\n",
       "---\n",
-      "Confusion Matrix\n",
       "actual              0    1\n",
       "predicted_MNBclf          \n",
       "0                 847  133\n",
@@ -3296,7 +3293,7 @@
    "source": [
     "print('Accuracy: {:.2%}'.format(accuracy_score(train.actual, train.predicted_MNBclf)))\n",
     "print('---')\n",
-    "print('Confusion Matrix')\n",
+    "\n",
     "print(pd.crosstab(train.predicted_MNBclf, train.actual))\n",
     "print('---')\n",
     "print(classification_report(train.actual, train.predicted_MNBclf))"
@@ -3304,7 +3301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -3313,7 +3310,6 @@
      "text": [
       "Accuracy: 86.54%\n",
       "---\n",
-      "Confusion Matrix\n",
       "actual              0   1\n",
       "predicted_MNBclf         \n",
       "0                 283  44\n",
@@ -3333,7 +3329,7 @@
    "source": [
     "print('Accuracy: {:.2%}'.format(accuracy_score(validate.actual, validate.predicted_MNBclf)))\n",
     "print('---')\n",
-    "print('Confusion Matrix')\n",
+    "\n",
     "print(pd.crosstab(validate.predicted_MNBclf, validate.actual))\n",
     "print('---')\n",
     "print(classification_report(validate.actual, validate.predicted_MNBclf))"
@@ -3341,7 +3337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -3539,7 +3535,7 @@
        "[5 rows x 36553 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3554,7 +3550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3573,7 +3569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -3582,7 +3578,6 @@
      "text": [
       "Accuracy: 97.96%\n",
       "---\n",
-      "Confusion Matrix\n",
       "actual          0    1\n",
       "predicted_lm          \n",
       "0             847   20\n",
@@ -3603,7 +3598,7 @@
    "source": [
     "print('Accuracy: {:.2%}'.format(accuracy_score(train.actual, train.predicted_lm)))\n",
     "print('---')\n",
-    "print('Confusion Matrix')\n",
+    "\n",
     "print(pd.crosstab(train.predicted_lm, train.actual))\n",
     "print('---')\n",
     "print(classification_report(train.actual, train.predicted_lm))"
@@ -3611,7 +3606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -3620,7 +3615,6 @@
      "text": [
       "Accuracy: 84.10%\n",
       "---\n",
-      "Confusion Matrix\n",
       "actual          0   1\n",
       "predicted_lm         \n",
       "0             272  41\n",
@@ -3641,7 +3635,7 @@
    "source": [
     "print('Accuracy: {:.2%}'.format(accuracy_score(validate.actual, validate.predicted_lm)))\n",
     "print('---')\n",
-    "print('Confusion Matrix')\n",
+    "\n",
     "print(pd.crosstab(validate.predicted_lm, validate.actual))\n",
     "print('---')\n",
     "print(classification_report(validate.actual, validate.predicted_lm))"
@@ -3649,7 +3643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -3861,7 +3855,7 @@
        "[5 rows x 111059 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3875,7 +3869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3894,7 +3888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -3903,7 +3897,6 @@
      "text": [
       "Accuracy: 98.37%\n",
       "---\n",
-      "Confusion Matrix\n",
       "actual          0    1\n",
       "predicted_lm          \n",
       "0             847   16\n",
@@ -3924,7 +3917,7 @@
    "source": [
     "print('Accuracy: {:.2%}'.format(accuracy_score(train.actual, train.predicted_lm)))\n",
     "print('---')\n",
-    "print('Confusion Matrix')\n",
+    "\n",
     "print(pd.crosstab(train.predicted_lm, train.actual))\n",
     "print('---')\n",
     "print(classification_report(train.actual, train.predicted_lm))"
@@ -3932,7 +3925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -3941,7 +3934,6 @@
      "text": [
       "Accuracy: 84.71%\n",
       "---\n",
-      "Confusion Matrix\n",
       "actual          0   1\n",
       "predicted_lm         \n",
       "0             274  41\n",
@@ -3962,7 +3954,7 @@
    "source": [
     "print('Accuracy: {:.2%}'.format(accuracy_score(validate.actual, validate.predicted_lm)))\n",
     "print('---')\n",
-    "print('Confusion Matrix')\n",
+    "\n",
     "print(pd.crosstab(validate.predicted_lm, validate.actual))\n",
     "print('---')\n",
     "print(classification_report(validate.actual, validate.predicted_lm))"
@@ -3983,11 +3975,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Sketchy work"
+   ]
   },
   {
    "cell_type": "code",
