amended prepare.ipynb

--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "from nltk import WordNetLemmatizer\n",
     "from nltk.corpus import stopwords\n",
     "import unicodedata\n",
-    "import wrangle"
+    "import scraper"
    ]
   },
   {
@@ -28,7 +28,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "scraper.grab_vidz()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import individual dataframes\n",
+    "ca = pd.read_csv('22.31.10_CA_videos.csv')\n",
+    "de = pd.read_csv('22.31.10_DE_videos.csv')\n",
+    "fr = pd.read_csv('22.31.10_FR_videos.csv')\n",
+    "gb = pd.read_csv('22.31.10_GB_videos.csv')\n",
+    "ind = pd.read_csv('22.31.10_IN_videos.csv')\n",
+    "jp = pd.read_csv('22.31.10_JP_videos.csv')\n",
+    "kr = pd.read_csv('22.31.10_KR_videos.csv')\n",
+    "mx = pd.read_csv('22.31.10_MX_videos.csv')\n",
+    "ru = pd.read_csv('22.31.10_RU_videos.csv')\n",
+    "us = pd.read_csv('youtube_us.csv')\n",
+    "\n",
+    "df = pd.concat([ca, de, fr, gb, ind, jp, kr, mx, ru, us])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['rank'] = df.index + 1"
+   ]
   }
  ],
  "metadata": {
