amended: prepare.py with comments and full functionality.

--- a/prepare.ipynb
+++ b/prepare.ipynb
@@ -22,10 +22,8 @@
     "import os\n",
     "import glob\n",
     "  \n",
-    "from bs4 import BeautifulSoup as soupify\n",
     "from os import path\n",
     "from requests import get\n",
-    "from importlib import reload\n",
     "import numpy as np\n",
     "import re\n",
     "import unicodedata\n",
@@ -1206,148 +1204,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "942450a2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.drop(columns=['index'], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "id": "0d6ff8e9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_pickle('prepared.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "f16d3e72",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "testy = pd.read_pickle('prepared.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "239b7ed7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df=testy.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "e664af54",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1229 entries, 0 to 1228\n",
-      "Data columns (total 29 columns):\n",
-      " #   Column                   Non-Null Count  Dtype              \n",
-      "---  ------                   --------------  -----              \n",
-      " 0   video_id                 1229 non-null   object             \n",
-      " 1   title                    1229 non-null   object             \n",
-      " 2   publishedAt              1229 non-null   datetime64[ns, UTC]\n",
-      " 3   channelTitle             1229 non-null   object             \n",
-      " 4   categoryId               1229 non-null   object             \n",
-      " 5   trending_date            1229 non-null   datetime64[ns, UTC]\n",
-      " 6   tags                     1229 non-null   object             \n",
-      " 7   view_count               1229 non-null   object             \n",
-      " 8   likes                    1229 non-null   object             \n",
-      " 9   comment_count            1229 non-null   object             \n",
-      " 10  thumbnail_link           1229 non-null   object             \n",
-      " 11  comments_disabled        1229 non-null   object             \n",
-      " 12  ratings_disabled         1229 non-null   object             \n",
-      " 13  description              1229 non-null   object             \n",
-      " 14  duration                 1229 non-null   int64              \n",
-      " 15  captions                 1229 non-null   object             \n",
-      " 16  region                   1229 non-null   object             \n",
-      " 17  rank                     1229 non-null   int64              \n",
-      " 18  top_25                   1229 non-null   int64              \n",
-      " 19  age                      1229 non-null   timedelta64[ns]    \n",
-      " 20  engagement               1229 non-null   object             \n",
-      " 21  sponsored                1229 non-null   int64              \n",
-      " 22  num_of_tags              1229 non-null   int64              \n",
-      " 23  word_bank                1229 non-null   object             \n",
-      " 24  cleaned_tags             1229 non-null   object             \n",
-      " 25  cleaned_desc             1229 non-null   object             \n",
-      " 26  title_in_description     1229 non-null   int64              \n",
-      " 27  title_in_tags            1229 non-null   int64              \n",
-      " 28  pct_tags_in_description  1229 non-null   float64            \n",
-      "dtypes: datetime64[ns, UTC](2), float64(1), int64(7), object(18), timedelta64[ns](1)\n",
-      "memory usage: 278.6+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "testy.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "1ba73177",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv('prepared.csv', index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 84,
    "id": "20fac388",
    "metadata": {},
    "outputs": [],
    "source": [
     "#converts the age category timedelta into hours .. so the videos are x hours old now \n",
-    "df.age = (df.age.dt.days * 24) + (df.age.dt.seconds/3600)"
+    "df.age = (df.age.dt.days * 24) + (df.age.dt.seconds/3600)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "40acaa07",
+   "execution_count": 96,
+   "id": "56831135",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       82.554444\n",
-       "1       31.995556\n",
-       "2       86.498611\n",
-       "3      115.999722\n",
-       "4       36.749722\n",
-       "          ...    \n",
-       "155     77.999167\n",
-       "156     90.500000\n",
-       "157    108.498333\n",
-       "158     66.498056\n",
-       "159    161.523056\n",
-       "Name: age, Length: 9536, dtype: float64"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.age"
+    "df['title_lengths'] = df[\"title\"].apply(lambda x: len(x))\n",
+    "df['desc_lengths'] = df[\"description\"].apply(lambda x: 0 if pd.isnull(x) else len(x))\n",
+    "df['tags_length'] = df['tags'].apply(lambda x: len(x.replace('|', '')) if x != '[none]' else 0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "9a29a744",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.reset_index(inplace=True)\n",
+    "df.drop(columns='index', inplace=True)\n",
+    "df.to_pickle('prepared.pkl')"
    ]
   }
  ],
